no heavy serif headers pls

--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -138,6 +138,10 @@
     line-height: 1.2
     font-weight: 800
 
+  &.-serif
+    font-family: $serif
+    font-weight: 400
+
   // alignment
   &.-centered
     text-align: center
