--- a/app/views/articles/templates/_opinion.html.haml
+++ b/app/views/articles/templates/_opinion.html.haml
@@ -8,7 +8,7 @@
 
     .wrapper.-small{role: 'layout'}
       .block.-mb2
-        %h1.h.-h2.-w4.c.-serif= raw article.title
+        %h1.h.-h2.-serif= raw article.title
 
       - article.authors.each do |author|
         .block.-mb4.-px2
