--- a/app/assets/stylesheets/layouts/_wrapper.sass
+++ b/app/assets/stylesheets/layouts/_wrapper.sass
@@ -2,6 +2,8 @@
   &.-container
     margin-left: 2vw
     margin-right: 2vw
+    max-width: 100vw
+    overflow: hidden
     @media screen and (min-width: $large)
       margin-left: 3vw
       margin-right: 3vw
