fix the subscription enticement box on mobile

--- a/app/views/products/_enticement.html.haml
+++ b/app/views/products/_enticement.html.haml
@@ -2,23 +2,26 @@
   .wrapper.-contained{role: 'layout'}
     .block
       - if logged_in? and current_user.subscriber? and current_user.patron?
-        .enticement
-          %figure.artwork= image_tag "ads/meath-street.jpg"
-          .text
-            %header.-issue
-              %h3.heading Give a subscription
-            .p.-t3.-serif.-sf
-              :markdown
-                A subscription to Dublin Inquirer is the perfect gift for the inquisitive Dubliner in your life.
-          %nav.block.-mt4
-            = link_to raw("Give a subscription &rarr;"), :gift_subscriptions, class: 'button -standard -big'
+        .row
+          .col-xs-12.col-md-6
+            %figure.artwork= image_tag "ads/meath-street.jpg"
+          .col-xs-12.col-md-6.col.flex.-c
+            .flex.-c.block.-pr4.-py4.-pl2
+              .block.-mb2
+                %h3.h.-h2 Give a subscription
+              .p.-t3.-serif.-sf
+                :markdown
+                  A subscription to Dublin Inquirer is the perfect gift for the inquisitive Dubliner in your life.
+
+              %nav.block.-mt4
+                = link_to raw("Give a subscription &rarr;"), :gift_subscriptions, class: 'button -standard -big'
 
       - elsif logged_in? and current_user.subscriber?
         .row
           .col-xs-12.col-md-6
             %figure.artwork= image_tag "ads/meath-street.jpg"
-          .col-xs-12.col-md-6.col.flex
-            .flex.-cy.block.-pr4
+          .col-xs-12.col-md-6.col.flex.-c
+            .flex.-c.block.-pr4.-py4.-pl2
               .block.-mb2
                 %h3.h.-h2 Support our work
               .p.-t3.-serif.-sf
@@ -34,8 +37,8 @@
         .row
           .col-xs-12.col-md-6
             %figure.artwork= image_tag "ads/meath-street.jpg"
-          .col-xs-12.col-md-6.col.flex
-            .flex.-cy.block.-pr4
+          .col-xs-12.col-md-6.col.flex.-c
+            .flex.-c.block.-pr4.-py4.-pl2
               .block.-mb2
                 %h3.h.-h2 Understand your city
               .p.-t3.-serif.-sf
