busier home page on the ipad

--- a/app/assets/stylesheets/components/_primary-flag.sass
+++ b/app/assets/stylesheets/components/_primary-flag.sass
@@ -38,13 +38,17 @@
 
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
-  @media screen and (min-width: $large)
     justify-content: space-between
     padding: 0
 
     .ear
       display: block
-      width: 24rem
+      width: 22rem
     .flag
       .strapline
         display: block
+
+  @media screen and (min-width: $large)
+
+    .ear
+      width: 24rem
