--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -9,7 +9,7 @@
     .wrapper.-medium{role: 'layout'}
       .row
         .col-xs-12.col-md-6.flex
-          .block.-bg-default.-b.flex.-c.-sb
+          .block.-bg-default.-b.flex.-c.-sb.-mt2
             .block.-p2.p.-t4.-centered
               %h3.p.-t3.-centered.c.-w8.block.-mb1 Digital
               :markdown
@@ -20,7 +20,7 @@
                 = link_to raw("Subscribe for €5/month"), product_path(:digital), class: 'button -standard -big'
 
         .col-xs-12.col-md-6.flex
-          .block.-bg-default.-b.flex.-c.-sb
+          .block.-bg-default.-b.flex.-c.-sb.-mt2
             .block.-p2.p.-t4.-centered
               %h3.p.-t3.-centered.c.-w8.block.-mb1 Digital + Print
               :markdown
