more mobile tweaks wrt home page and subscribe

--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -1,5 +1,7 @@
 .button, a.button, a.button:link, a.button:visited, input.button
   font-family: $sans
+  -webkit-appearance: none
+  border: 0
 
   &:hover
     cursor: pointer
