--- a/app/views/landing_pages/direct_190227.html.haml
+++ b/app/views/landing_pages/direct_190227.html.haml
@@ -7,7 +7,7 @@
   .block.-mt4.-pull-down
     .wrapper.-medium{role: 'layout'}
       .row
-        .col-xs-12.col-md-6.col-md-offset-3
+        .col-xs-12.col-md-8.col-md-offset-2
           .block.-bg-default.-b.flex.-c.-sb
             .block.-p2.p.-t4.-centered
               %h3.p.-t3.-centered.c.-w8.block.-mb1 Basic digital subscription
@@ -80,7 +80,7 @@
 
   .block.-my4
     .wrapper.-small{role: 'layout'}
-      .block.-px4
+      .block.-bg-faint.-p4.-b
         .block.-mb2
           %h3.h.-h3.-centered Become a subscriber:
         .p.-t4.-centered
