--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -90,7 +90,7 @@
 
   .block.-my4
     .wrapper.-small{role: 'layout'}
-      .block.-px4
+      .block.-bg-faint.-p4.-b
         .block.-mb2
           %h3.h.-h3.-centered Become a subscriber:
         .p.-t4.-centered
