--- a/app/assets/stylesheets/components/_excerpt.sass
+++ b/app/assets/stylesheets/components/_excerpt.sass
@@ -1,5 +1,6 @@
 .excerpt, a.excerpt, a.excerpt:link, a.excerpt:visited
   transition: color 0.25s ease
+  width: 100%
   &:hover
     color: var(--black)
     .headline
