--- a/app/assets/stylesheets/components/_primary-flag.sass
+++ b/app/assets/stylesheets/components/_primary-flag.sass
@@ -1,3 +1,9 @@
+.primary-flag
+  display: none
+  @media screen and (min-width: $small)
+  @media screen and (min-width: $medium)
+    display: block
+
 .flag-ears
   display: flex
   flex-direction: row
