--- a/app/assets/stylesheets/components/_sub-omnipresent.sass
+++ b/app/assets/stylesheets/components/_sub-omnipresent.sass
@@ -1,2 +1,8 @@
 .sub-omnipresent
   padding-top: calc(4.32rem - 0.75rem)
+
+.sub-semipresent
+  padding-top: calc(4.32rem - 0.75rem + 2rem)
+  @media screen and (min-width: $small)
+  @media screen and (min-width: $medium)
+    padding-top: 0
