--- a/app/views/articles/excerpts/_result.html.haml
+++ b/app/views/articles/excerpts/_result.html.haml
@@ -1,5 +1,5 @@
 - cache [article, 'result'] do
-  .block.-pb4
+  .block.-pb4.-mt4
     = link_to article.path, class: 'excerpt' do
       .block.-mb1
         %figure.artwork.-landscape
