--- a/app/views/articles/search.html.haml
+++ b/app/views/articles/search.html.haml
@@ -3,7 +3,7 @@
 %header.page-header
   %h1.h.-h2
     Search results for
-    %code.code.-quote #{ params[:q] }
+    %span.c.-quote #{ params[:q] }
 
 .block.-pt2.-pb4
   - if @articles.any?
