--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -4,7 +4,7 @@
 %header.page-header
   %h1.h.-h2
     Articles related to
-    %code.code.-quote #{ @tag.name }
+    %span.c.-quote #{ @tag.name }
 
 .block.-pt2.-pb4
   .wrapper.-contained{role: 'layout'}
