list styles for articles

--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -44,8 +44,14 @@
     letter-spacing: -0.0325em
 
   ul, ol
-    padding-left: 4rem
+    padding-left: 6rem
     padding-right: 10%
+
+  ul
+    list-style: square outside
+
+  ol
+    list-style: decimal outside
 
   video, figure, iframe
     width: 100%
