resize medium thingy

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -6,7 +6,7 @@
       .block.-mt2.p.-t3 Subscribe now for as little as €5 per month
 
   .block.-mt4.-pull-down
-    .wrapper.-medium{role: 'layout'}
+    .wrapper.-large{role: 'layout'}
       .row
         .col-xs-12.col-md-6.flex
           .block.-bg-default.-b.flex.-c.-sb.-mt2
