--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -2,7 +2,7 @@
 - description "Dublin Inquirer is an independent, reader-supported newspaper serving Ireland's capital"
 - set_meta_tags canonical: "https://www.dublininquirer.com/imprint"
 
-- cache ['imprint', 'v1'] do
+- cache ['imprint', 'v2'] do
   %header.page-header
     %h1.h.-h2 Dublin Inquirer is an independent newspaper launched in June 2015 to provide quality coverage of city affairs.
 
@@ -27,14 +27,13 @@
           %p #{ link_to @staff[:cto].full_name, @staff[:cto] }
 
         .block.-my2
-          %h4.h.-h4.-centered Columnists
+          %h4.h.-h4 Columnists
           - @columnists.each do |author|
             %p #{ author.full_name }
 
         .block.-my2
-          %h4.h.-h4.-centered Regular contributors
-          - @contributors.each do |author|
-            .block.-my2.p.-t3.-centered
-              %p #{ author.full_name }
+          %h4.h.-h4 Regular contributors
+          - @contributor.each do |author|
+            %p #{ author.full_name }
 
 = render partial: 'products/enticement'
