--- a/app/assets/stylesheets/layouts/_wrapper.sass
+++ b/app/assets/stylesheets/layouts/_wrapper.sass
@@ -9,7 +9,7 @@
 
   @media screen and (min-width: $medium)
     &.-medium
-      max-width: $medium
+      max-width: 80rem
       margin-left: auto
       margin-right: auto
 
