--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -8,10 +8,10 @@
         .twofer
           .field
             = f.label :given_name, 'First name'
-            = f.text_field :given_name, placeholder: 'First'
+            = f.text_field :given_name
           .field
-            = f.label :given_name, 'Surname'
-            = f.text_field :surname, placeholder: 'Surname'
+            = f.label :surname, 'Surname'
+            = f.text_field :surname
 
       .field
         = f.label :email_address
