--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,31 +2,40 @@
 - noindex true
 
 .wrapper.-tiny{role: 'layout'}
-  %header.block.-mt4.-mb2
+  %header.page-header
     %h2.h.-h4.-centered
-      Sign up for a free account
+      Sign up for a free account and get an extra free article each month
 
-  .block.-my4.p.-t3
-    = form_for @user, html: {class: 'box-form'} do |f|
-      .block.-b
-        .field
-          = f.label :given_name, 'Name'
-          .twofer
-            = f.text_field :given_name, placeholder: 'First'
-            = f.text_field :surname, placeholder: 'Surname'
-        .field
-          = f.label :email_address
-          = f.email_field :email_address, placeholder: 'sean@example.ie'
-        .field
-          = f.label :password
-          = f.password_field :password, placeholder: 'password123'
+  = form_for @user do |f|
+    .block.-form.-b.-p2.-bg-faint
+      .field
+        .twofer
+          .field
+            = f.label :given_name, 'First name'
+            = f.text_field :given_name
+            = render_errors_for(@user, :given_name)
+          .field
+            = f.label :surname, 'Surname'
+            = f.text_field :surname
+            = render_errors_for(@user, :surname)
 
-        .field.-check
-          = f.label :subscribed_weekly do
-            = f.check_box :subscribed_weekly
-            Get our free weekly email newsletter?
+      .field
+        = f.label :email_address
+        = f.email_field :email_address, placeholder: 'sean@example.ie'
+        = render_errors_for(@user, :email_address)
 
-      %nav.block.-mt2.-mb4.p.-centered
+      .field
+        = f.label :password
+        = f.password_field :password, placeholder: 'password123'
+        = render_errors_for(@user, :password)
+
+      .field.-check
+        = f.label :subscribed_weekly do
+          = f.check_box :subscribed_weekly
+          Get our free weekly email newsletter?
+        = render_errors_for(@user, :subscribed_weekly)
+
+      %nav.block.-mt2.actions
         = f.submit 'Register', class: 'button -standard -big'
 
   .block.-my4.-py4
