more minor page fixes

--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -19,6 +19,12 @@
   &.-red
     color: var(--red)
 
+    &.-sf
+      a, a:link, a:visited
+        color: var(--red)
+        font-weight: 400
+        border-color: var(--red)
+
   &.-grey
     color: var(--grey)
 
