--- a/app/views/migration/hold.html.haml
+++ b/app/views/migration/hold.html.haml
@@ -1,15 +1,11 @@
-- title 'Migrate'
+- title 'Set up account'
 - noindex true
 
-- content_for :breadcrumbs do
-  .current Migrate
+.wrapper.-small{role: 'layout'}
+  .block.-my4.-py4
+    %header.block.-mt4.-mb2
+      %h2.h.-h2.-centered Check your email
 
-%header.header.-section
-  %h1.heading Check your email
-
-.box.-padded-v
-  .text.-static
-    :markdown
-      Looks like you already have a Dublin Inquirer account or subscription. **We've sent you an email with a link to set up your new Dublin Inquirer account**.
-
-      Apologies for the inconvenience: you'll only have to do this once!
+    .p.-t3.-sf
+      :markdown
+        We've sent you an email with a link to set up your new Dublin Inquirer account. Apologies for the inconvenience: you'll only have to do this once!
