--- a/app/views/users/payment.html.haml
+++ b/app/views/users/payment.html.haml
@@ -2,7 +2,7 @@
   %header.page-header
     %h1.h.-h2 Update your payment method
 
-  - if current_user.delinquent? or true
+  - if current_user.delinquent?
     .block.-mb4
       .p.-t3.-sf
         :markdown
