--- a/app/views/authors/show.html.haml
+++ b/app/views/authors/show.html.haml
@@ -20,8 +20,9 @@
       :markdown
         #{ raw @author.bio }
 
-.block.-pt2.-pb4
-  .wrapper.-contained{role: 'layout'}
-    .block.-my2
-      %h3.h.-h4.-centered Articles by #{ @author.full_name }
-    = render partial: 'articles/index', locals: {page: @page, articles: @articles, query_params: {}}
+- if @articles.any?
+  .block.-pt2.-pb4
+    .wrapper.-contained{role: 'layout'}
+      .block.-my2
+        %h3.h.-h4.-centered Articles by #{ @author.full_name }
+      = render partial: 'articles/index', locals: {page: @page, articles: @articles, query_params: {}}
