more migration form updates

--- a/app/views/migration/payment.html.haml
+++ b/app/views/migration/payment.html.haml
@@ -1,32 +1,34 @@
-- title 'Migrate'
-- noindex true
+.wrapper.-small{role: 'layout'}
+  %header.page-header
+    %h1.h.-h2 Update your payment method
 
-%header.header.-section
-  %h1.heading Update your payment method
+  - if current_user.delinquent?
+    .block.-mb4
+      .p.-t3.-sf
+        :markdown
+          We've been having trouble charging your card. Please enter your credit/debit card details below to avoid an interruption in your subscription.
 
-.box.-padded-v
-  .text
-    :markdown
-      We've been having trouble charging your card. Please enter your credit/debit card details below to avoid an interruption in your subscription.
+  = form_for @user, url: :migrate_payment_save, method: :put, html: {class: 'subscription-form', data: {'fonts-url': asset_url('fonts.css')}} do |f|
+    .block.-form.-b.-p2.-bg-faint
+      .field
+        %label Card number
+        #stripe-form_card-number
 
-.box
-  = form_for @user, url: :migrate_payment_save, method: :put, html: {class: 'modal-form subscription-form', data: {'fonts-url': asset_url('fonts.css')}} do |f|
-    .error{style: 'display:none;'}
-      .message &nbsp; |f|
-    .box.-padded.-apart
-      .modal-form_fields
-        .modal-form_field
-          %label Card number
-          #stripe-form_card-number.field.empty
+      .field.twofer
+        .field
+          %label Expiration date
+          #stripe-form_card-expiry
+        .field
+          %label Security code
+          #stripe-form_card-cvc
 
-        .modal-form_field.-double
-          .modal-form_field
-            %label Expiration date
-            #stripe-form_card-expiry.field.empty
-          .modal-form_field
-            %label Security code
-            #stripe-form_card-cvc.field.empty
+      %nav.block.-mt2.actions
+        = f.submit 'Save changes', class: 'button -standard -big'
 
-    .modal-form_actions
-      %p.status
-      = f.submit 'Save', class: 'button'
+      .block.-mt2
+        .p.-t4.-centered.c.-grey.-sf
+          :markdown
+            We use <a href="https://www.stripe.com" target="_blank">Stripe</a> to securely handle payment details.
+
+  .block.-my4.-py4
+    .p.-t4.-sf.-centered &nbsp;
