--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -26,7 +26,7 @@
       .col-xs-12.col-md-4
         %h3.p.-t4.c.-w6 Filed under:
 
-        .block
+        .block.-mb2
           .p.-t3
             %ul.list.-sentence
               - @article.displayable_tags.each do |tag|
@@ -35,7 +35,7 @@
       .col-xs-12.col-md-4
         %h3.p.-t4.c.-w6 #{ @article.authors.many? ? 'Authors' : 'Author' }:
 
-        .block
+        .block.-mb2
           .p.-t3
             - @article.authors.each do |author|
               :markdown
