--- a/app/assets/stylesheets/shared/_artwork.sass
+++ b/app/assets/stylesheets/shared/_artwork.sass
@@ -28,7 +28,7 @@
     text-align: center
     background: var(--default)
 
-  &.-landscape, &.-square, &.-portrait
+  &.-landscape, &.-square, &.-face
     overflow: hidden
     img
       z-index: 0
@@ -40,10 +40,10 @@
       object-fit: cover
       object-position: center center
 
-  &.-portrait
+  &.-face
     border-radius: 1.5px
-    width: 8rem
-    height: 8rem
+    width: 12rem
+    height: 12rem
     margin: 0 auto
 
   &.-landscape
