some tweaks to stack template

--- a/app/assets/stylesheets/admin/_admin-header.sass
+++ b/app/assets/stylesheets/admin/_admin-header.sass
@@ -6,7 +6,7 @@
   top: 0
   bottom: 0
   z-index: 999
-  background: var(--default)
+  background: var(--faint)
   display: flex
   flex-direction: column
   justify-content: flex-start
@@ -15,6 +15,7 @@
     flex: 0
     padding: 0.5rem 1rem
     width: 14rem
+    font-weight: 600
     font-size: var(--t5)
     &:hover
       background-color: var(--blue)
