--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -24,7 +24,7 @@
       margin-top: 0
       padding-top: 0
 
-    &.-p, &.-ul, &.-ol, &.-blockquote
+    &.-p, &.-ul, &.-ol, &.-blockquote, &.-figure, &.-iframe, &.-video, &.-podcast
       margin-top: 2rem
       margin-bottom: 2rem
 
@@ -56,6 +56,9 @@
   video, figure, iframe
     width: 100%
     height: auto
+
+  &.-stacked
+
 
   // this should mirror the above
   &.-constrained
