--- a/app/views/articles/templates/_stack.html.haml
+++ b/app/views/articles/templates/_stack.html.haml
@@ -24,5 +24,5 @@
     = render partial: 'articles/meta', locals: {article: article}
 
 .wrapper.-small{role: 'layout'}
-  %article.article.-formatted.-standard{lang: 'en'}
+  %article.article.-formatted.-standard.-stacked{lang: 'en'}
     = raw render_content(article.content)
