more stacked template tweaks

--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -58,7 +58,9 @@
     height: auto
 
   &.-stacked
-
+    &.-figure, &.-iframe, &.-video
+      margin-top: 0
+      margin-bottom: 0
 
   // this should mirror the above
   &.-constrained
