--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -57,6 +57,10 @@
     width: 100%
     height: auto
 
+  .section-separator
+    text-align: center
+    color: var(--blue)
+
   &.-stacked
     &.-figure, &.-iframe, &.-video
       margin-top: 0
